--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul id="menu" class="hidden md:flex space-x-6 text-lg">
                 <li><a href="#hero" class="hover:text-blue-400">Home</a></li>
                 <li><a href="#about" class="hover:text-blue-400">About</a></li>
-                <li><a href="#experience" class="hover:text-blue-400">Work Experience</a></li>
+                <li><a href="#experience" class="hover:text-blue-400">Experience</a></li>
                 <li><a href="#Skills" class="hover:text-blue-400">Skills</a></li>
                 <li><a href="#Contact" class="hover:text-blue-400">Contact</a></li>
             </ul>
@@ -38,7 +38,7 @@
         <ul id="mobile-menu" class="hidden bg-gray-700 text-center py-4 space-y-2 md:hidden">
             <li><a href="#hero" class="hover:text-blue-400">Home</a></li>
             <li><a href="#about" class="hover:text-blue-400">About</a></li>
-            <li><a href="#experience" class="hover:text-blue-400">Work Experience</a></li>
+            <li><a href="#experience" class="hover:text-blue-400">Experience</a></li>
             <li><a href="#Skills" class="hover:text-blue-400">Skills</a></li>
             <li><a href="#Contact" class="hover:text-blue-400">Contact</a></li>
         </ul>
